<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_blue"
    tools:context=".StartScreenActivity">

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/otter_icon_done"
        android:layout_width="86dp"
        android:layout_height="112dp"
        android:layout_alignEnd="@+id/logo_name"
        android:layout_alignBottom="@+id/logo_name"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="-82dp"
        android:layout_marginBottom="-31dp"
        android:scrollbarSize="@android:dimen/app_icon_size"
        app:srcCompat="@drawable/otter_icon_done" />

    <Button
        android:id="@+id/getStarted_btn"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_name"
        android:layout_alignBottom="@+id/logo_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="-101dp"
        android:autoSizeTextType="none"
        android:background="@drawable/button_get_started"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="@string/get_started_btn"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="13dp"
        android:text="@string/reference"
        android:textStyle="bold" />

</RelativeLayout>