<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobDetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="305dp"
                android:background="@drawable/otter_icon"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/apply_job_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/apply_tag" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:text="@string/job_title"
                android:textColor="#14CA5D"
                android:textColorLink="#18BA1E"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/jobtitle_tv"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:text="@string/company_name"
                android:textColor="#14CA5D"
                android:textColorLink="#18BA1E"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:srcCompat="@drawable/building_icon" />

            <TextView
                android:id="@+id/company_tv"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:text="@string/job_location"
                android:textColor="#14CA5D"
                android:textColorLink="#18BA1E"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/gps_icon" />

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_location"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:text="@string/job_salary"
                android:textColor="#14CA5D"
                android:textColorLink="#18BA1E"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="23dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/salary_icon" />

            <TextView
                android:id="@+id/salary_tv"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_salary"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:text="@string/job_description"
                android:textColor="#14CA5D"
                android:textColorLink="#18BA1E"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/job_description_icon" />

            <TextView
                android:id="@+id/job_des_details_tv"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_description"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>